# pyddon

./: .env.example  ARCHITECTURE.md  CLAUDE_TASK_API_STUDIO.md  CLOCKIFY_PYTHON_ADDON_DELIVERED.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile.test  ENV_VARS.md  ENV_VARS_REFERENCE.md  EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PLAN.md  PRODUCTION_HARDENING_COMPLETE.md  PRODUCTION_READINESS_ASSESSMENT.md  QUICKSTART.md  README.md  README.md.bak  TODO.md  UNIVERSAL_WEBHOOK_PROGRESS.md  alembic.ini  api_studio.db  cake_marketplace_dev_docs.md  clockify-api-studio-spec.md  docker-compose.test.yml  docker-compose.yml  init-db.sh  manifest.api-studio.json  manifest.universal-webhook.json  pyproject.toml
alembic/: env.py
api_studio/: Dockerfile  api_explorer.py  bootstrap.py  config.py  db.py  lifecycle.py  main.py  models.py  ui.py  webhooks.py
clockify-python-addon/: .env.example  .gitignore  COMPLETION_REPORT.md  DELIVERED.txt  DOCKER_HARDENING_NOTES.md  Dockerfile  ENV_VARS.md  FINAL_VERIFICATION.md  HARDENING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MARKETPLACE_NOTES.md  PRODUCTION_FIXES_COMPLETE.md  PRODUCTION_READINESS_GATE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STRUCTURE.md  alembic.ini  docker-compose.yml  manifest.json  openapi.json  requirements.txt
clockify_api_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clockify_core/: __init__.py  clockify_client.py  config.py  metrics.py  openapi_loader.py  security.py  (+1 more)
(+80 files in other folders)
